--- a/CSS/style-home.css
+++ b/CSS/style-home.css
@@ -57,7 +57,7 @@
 
 .max-tamanho-modal
 {
-    max-width: 600px;
+    max-width: 700px;
     max-height: 800px;
 }
 
@@ -100,13 +100,21 @@
 }
 
 .img-capa{
-    width: 17rem;
+    width: 240px;
     height: 100%;
 
     margin: 0;
     padding: 0;
 
-    object-fit: cover;
+    object-fit: fill;
+}
+
+.img-capa-display{
+    width: 240px;
+    height: 360px;
+
+    margin: 0;
+    padding: 0;
 }
 
 .card-size{
